Fix text alignment in permission edition

--- a/src/app/projects/project-details/developers/project-details-developers.styl
+++ b/src/app/projects/project-details/developers/project-details-developers.styl
@@ -56,7 +56,6 @@
 .projects-project-details-developers-edit-panel-label
   color $label-primary-color
   margin-left 10px
-  margin-top 6px
 
 .projects-project-details-developers-edit-panel-checkboxes md-checkbox
   margin-left 10px
